# TSOCA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: ------------.md
Assets/Scripts/: config.lua  main.lua  oneiro.lua  resources.lua  utils.lua
Assets/Shaders/OpenGL/: post_processing_test.glsl
Source/: TSOCAApp.cpp  TSOCAApp.hpp
